completed product services